--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~11.0.1",
     "@angular/platform-browser-dynamic": "~11.0.1",
     "@angular/router": "~11.0.1",
+    "@swimlane/ngx-charts": "^18.0.1",
     "bootstrap": "^4.6.0",
     "moment": "^2.29.1",
     "ngx-bootstrap": "^6.2.0",
